refactor: Cleanup NodeAdapterTest